# petpop

./: .gitignore  AGENTS.md  CONSTRAINTS.zh-CN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
sakiko/: pet.json
src/: App.svelte  styles.css  styles.test.ts  tauriConfig.test.ts  tauriMainSource.test.ts  test-node.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: ControlApp.svelte  ControlApp.test.ts  FocusPanel.svelte  FocusPanel.test.ts  PetWindow.svelte  PetWindow.test.ts  SpritePet.svelte
src/lib/: actions.test.ts  actions.ts  animations.test.ts  animations.ts  interactionTiming.ts  petInteraction.test.ts  petInteraction.ts  petdesk.ts  petpop.test.ts  petpop.ts  runtimeScene.test.ts  runtimeScene.ts  sceneEngine.test.ts  sceneEngine.ts
taffy/: pet.json
